--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
   font-family: "Roboto", sans-serif;
   font-weight: 300;
   font-size: 18px;
-  line-height: 22.5px;
+  line-height: 30.6px;
 }
 
 :root {
